# PavonEngine

./: .gitignore  .vimspector.json  CMakeLists.txt  Editor  Makefile  README.md  adebug.sh  adev.sh  android  code_man.txt  compile  configure_content.sh  debug  dev.sh  freetype.sh  include.cmake  include.make  link.mk  local.properties  make_include.txt  push.sh  pvninstaller.sh  src
Engine/source/: CMakeLists.txt  audio.c  engine.c  engine.h  file_loader.h  game.c  gui.c  gui.h  input.c  main.c  model.c  model.h  shader.c  shader.h  skeletal.h  vertex.h
Engine/source/Editor/: CMakeLists.txt  HLOD_factory.c  HLOD_factory.h  commands.c  commands.h  data.c  data.h  editor.c  editor.h  editor_gizmos.c  export_model.c  geometry.c  geometry.h  gizmos.c  gizmos.h  input.c  input.h  main.c  menu_action.h  menus.c  menus.h  skeletal_editor.c  text.c  text.h  windows.c  windows.h  windows_manager.c  windows_manager.h
Engine/source/Engine/: array.c  array.h  collision.h  data.h  files_parser.c  geometry.c  geometry.h  level.c  memory.c  shader.c  shader.h  threads.h  types.h
Source/: CMakeLists.txt  CMakeListsCopy.txt  camera.h  engine.c  engine.h  file_loader.c  game.c  gui.c  gui.h  images.c  main.c  model.c  model.h
Source/Editor/: CMakeLists.txt  commands.c  commands.h  content_manager.c  content_manager.h  data.c  data.h  directories.h  editor.c  editor.h  editor_command_queue.h  editor_mode.c  editor_mode.h  export_model.c  export_model.h  file_explorer.c  file_explorer.h  geometry.c  geometry.h  gizmos.c  gizmos.h  input.c  input.h  level.c  level.h  main.c  menus.c  menus.h  path.c  path.h  skeletal_editor.c  skeletal_editor.h  text.c  text.h  windows_manager.c  windows_manager.h
Source/Editor/Blender/: blender.h
Source/Editor/EditServer/: edit_server.c  edit_server.h
Source/Editor/HLOD/: HLOD_factory.c
Source/Editor/ProjectManager/: project_manager.c  project_manager.h
Source/Editor/Serialization/: json_writer.h
Source/Editor/Textures/: texture_factory.c  texture_factory.h
Source/Editor/Windows/: content_browser.c  content_browser.h  static_mesh_editor.c  static_mesh_editor.h  tabs.c  tabs.h  windows_manager.c  windows_manager.h
Source/Engine/: CMakeLists.txt  LOD_system.c  LOD_system.h  array.c  array.h  camera.c  camera.h  content_manager.c  content_manager.h  engine.c  engine.h  file_loader.c  file_loader.h  files_parser.c  game.c  gui.c  gui.h  images.c  images.h  input.h  level.c  main.c  memory.c  memory.h  model.c  model.h  numbers.h  object_select.c  object_select.h  shader.c  shader.h  skeletal.h  text_renderer.c  text_renderer.h  threads.c  threads.h  time.c  time.h  types.h  utils.h  (+1 more)
Source/Engine/Collision/: collision.c  collision.h
Source/Engine/Math/: math.h  sphere.h
Source/Engine/Renderer/: renderer.h
Source/Engine/animation/: animation.c  animation.h
Source/Engine/audio/: audio_engine.c
Source/Engine/components/: components.c  components.h
Source/Scripts/Blender/: export.py  import.py
demos/car/: CMakeLists.txt  car.c
demos/chess/: CMakeLists.txt  alfil.glb  caballo.glb  chess.c  chess.h  chess_human.glb  peon.glb  reina.glb  rey.glb  torre.glb
source/editor/: CMakeLists.txt  Makefile  commands.c  commands.h  content_manager.c  content_manager.h  data.c  data.h  directories.c  editor.c  editor.h  editor_command_queue.h  editor_mode.c  editor_mode.h  editor_shader.h  export_model.c  file_explorer.c  geometry.c  geometry.h  gizmos.c  gizmos.h  input.c  input.h  level.c  main.c  menus.c  menus.h  modeling.c  modeling.h  path.c  path.h  skeletal_editor.c  skeletal_editor.h  stats.h  text.c  text.h  types.h
source/engine/: CMakeLists.txt  LOD_system.c  Makefile  array.c  array.h  audio.h  base.c  base.h  camera.c  camera.h  content_manager.c  elements.c  elements.h  engine.c  engine.h  file_loader.c  file_loader.h  files_parser.c  files_parser.h  game.c  game.h  gui.c  gui.h  images.c  images.h  input.c  input.h  level.c  level.h  log.c  log.h  macros.h  material.h  memory.c  memory.h  model.c  model.h  physics.c  render_thread.c  render_thread.h  (+18 more)
src/: CMakeLists.txt  audio.c  camera.c  camera.h  engine.c  engine.h  file_loader.c  file_loader.h  game.c  game.h  gui.c  gui.h  images.c  images.h  input.c  input.h  level.h  main.c  model.c  model.h  object_select.c  object_select.h  shader.h  skeletal.h  utils.h  vector.c  vector.h  vertex.h
src/Editor/: compile_game.sh  editor_mode.c  input.c  input.h  text.h  windows.c
src/Engine/: array.c  array.h  data.h  files_parser.c  files_parser.h  level.c  level.h  log.h  memory.c  memory.h
src/Game/: main.c
src/assets/: fireman.gltf  lince.gltf  module01.gltf  police.gltf  skeletal_mesh.gltf  triangle.gltf
src/editor/: CMakeLists.txt  HLOD_factory.c  HLOD_factory.h  Makefile  commands.c  content_manager.c  data.c  data.h  directories.h  editor.c  editor.h  editor_command_queue.c  editor_command_queue.h  export_model.c  export_model.h  file_explorer.h  gizmos.c  input.c  input.h  level.h  main.c  menus.c  network.c  path.h  project_manager.c  project_manager.h  skeletal_editor.c  skeletal_editor.h  text.c  text.h
src/engine/: LOD_system.c  Makefile  array.c  array.h  camera.c  camera.h  content_manager.h  elements.h  engine.h  file_loader.c  files_parser.c  files_parser.h  game.h  gui.c  images.c  images.h  input.h  interruptions.h  level.c  macros.h  memory.h  model.c  numbers.h  physics.h  shaders_code.h  skeletal.c  skeletal.h  text_renderer.c  text_renderer.h  threads.c  types.h  utils.h  vertex.h  window_manager.c  window_manager.h
src/level_editor/: compile_game.sh  data.c  data.h  editor.c  editor.h  editor_gizmos.c  editor_gizmos.h  editor_mode.c  editor_mode.h  export_model.c  export_model.h  input.c  input.h  main.c  menu_action.h  skeletal_editor.c  skeletal_editor.h  text.c  text.h  windows.c
src/main/: camera.c  camera.h  file_loader.c  gui.h  input.h  main.c  vector.c  vector.h  vertex.h
src/shaders/: Makefile  blue.frag  diffuse.vert  diffuse_vk.frag  shader_vk_frag.frag  shader_vk_vert2.vert  skinned.vert  vertex_modelling.frag  vk_compile.sh
(+328 files in other folders)
