set(components
        Engine/components/components.c
        )
set(core 
        Engine/memory.c
        Engine/array.c
        Engine/threads.c
        Engine/Renderer/OpenGL/opengl_es2.c
         )
         
set(engine_source
        ${core}
        model.c
        file_loader.c
        camera.c
        images.c
        input.c        
        gui.c
        object_select.c
        engine.c
        skeletal.c
        Engine/shader.c        
        Engine/level.c
        third_party/jsmn.c
        Engine/files_parser.c        
        Engine/animation/animation.c
        Engine/Collision/collision.c
        ${components}
)

add_library(engine
        STATIC
        ${engine_source}
)
