set(components
        Engine/components/components.c
        )
set(core 
        Engine/memory.c
        Engine/array.c
        Engine/threads.c
        Engine/Renderer/OpenGL/opengl_es2.c
        Engine/LOD_system.c
         )
         
set(engine_source
        ${core}
        Engine/model.c
        Engine/file_loader.c
        Engine/camera.c
        Engine/images.c       
        Engine/gui.c
        Engine/object_select.c
        Engine/engine.c
        Engine/skeletal.c
        Engine/shader.c        
        Engine/level.c
        ThirdParty/jsmn.c
        Engine/files_parser.c        
        Engine/animation/animation.c
        Engine/Collision/collision.c
        Engine/content_manager.c
        Engine/text_renderer.c
        ${components}
)

include(FindFreetype)
include_directories(${FREETYPE_INCLUDE_DIRS})

add_library(engine
        STATIC
        ${engine_source}
)
